<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
 android:stretchColumns="*" 
 android:layout_width="match_parent" 
 android:layout_height="match_parent"
    
     >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />
	

        
<TextView 
 	      android:id="@+id/TextView01" 
 android:gravity="left" 
 android:layout_width="match_parent" 
 android:layout_height="wrap_content" 
 android:background="@color/red_background" 
 android:textColor="@color/grey_txt" 
 android:text="@string/captured"  />
 	
 	<TextView 
 	      android:id="@+id/TextView02" 
 android:gravity="left" 
 android:layout_width="match_parent" 
 android:layout_height="wrap_content" 
 
 android:textColor="@color/grey_txt" 
 android:text="@string/gangTitle"  />

	<TableRow>
	<Button 
 android:background="?android:attr/selectableItemBackground"
 android:id="@+id/btnPrison" 
 android:layout_width="match_parent" 
 android:layout_height="wrap_content" 
 android:text="@string/prison"/>
	<Button 
 android:background="?android:attr/selectableItemBackground"
 android:id="@+id/btnRelease" 
 android:layout_width="match_parent" 
 android:layout_height="wrap_content" 
 android:text="@string/release"/>
	
	
        </TableRow>
        </TableLayout>

